; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/ide/extr_at91_ide.c_at91_ide_set_pio_mode.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/ide/extr_at91_ide.c_at91_ide_set_pio_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.TYPE_5__* }
%struct.TYPE_5__ = type { i64 }
%struct.ide_timing = type { i32 }

@.str = private unnamed_addr constant [22 x i8] c"chipselect %u pio %u\0A\00", align 1
@XFER_PIO_0 = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_6__*, i64)* @at91_ide_set_pio_mode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @at91_ide_set_pio_mode(%struct.TYPE_6__* %0, i64 %1) #0 {
  %3 = alloca %struct.TYPE_6__*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.ide_timing*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %3, align 8
  store i64 %1, i64* %4, align 8
  %8 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %9 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %8, i32 0, i32 0
  %10 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  store i64 %12, i64* %6, align 8
  store i32 0, i32* %7, align 4
  %13 = load i64, i64* %6, align 8
  %14 = load i64, i64* %4, align 8
  %15 = call i32 @pdbg(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0), i64 %13, i64 %14)
  %16 = load i64, i64* @XFER_PIO_0, align 8
  %17 = load i64, i64* %4, align 8
  %18 = add nsw i64 %16, %17
  %19 = call %struct.ide_timing* @ide_timing_find_mode(i64 %18)
  store %struct.ide_timing* %19, %struct.ide_timing** %5, align 8
  %20 = load %struct.ide_timing*, %struct.ide_timing** %5, align 8
  %21 = icmp ne %struct.ide_timing* %20, null
  %22 = xor i1 %21, true
  %23 = zext i1 %22 to i32
  %24 = call i32 @BUG_ON(i32 %23)
  %25 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %26 = load i64, i64* %4, align 8
  %27 = call i64 @ide_pio_need_iordy(%struct.TYPE_6__* %25, i64 %26)
  %28 = icmp ne i64 %27, 0
  br i1 %28, label %29, label %30

29:                                               ; preds = %2
  store i32 1, i32* %7, align 4
  br label %30

30:                                               ; preds = %29, %2
  %31 = load i64, i64* %6, align 8
  %32 = load i64, i64* %4, align 8
  %33 = load %struct.ide_timing*, %struct.ide_timing** %5, align 8
  %34 = load i32, i32* %7, align 4
  %35 = call i32 @apply_timings(i64 %31, i64 %32, %struct.ide_timing* %33, i32 %34)
  ret void
}

declare dso_local i32 @pdbg(i8*, i64, i64) #1

declare dso_local %struct.ide_timing* @ide_timing_find_mode(i64) #1

declare dso_local i32 @BUG_ON(i32) #1

declare dso_local i64 @ide_pio_need_iordy(%struct.TYPE_6__*, i64) #1

declare dso_local i32 @apply_timings(i64, i64, %struct.ide_timing*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
